@@ -4,6 +4,9 @@ use Test::More;
 
 BEGIN { plan skip_all => "Perl 5.10 only tests" if $] < 5.010; }
 
+# These are tests that depend upon 5.10 (eg, smart-match).
+# Basic tests should go in basic_exceptions.t
+
 use 5.010;
 use constant NO_SUCH_FILE => 'this_file_had_better_not_exist_xyzzy';
 
@@ -19,14 +22,6 @@ ok($@ ~~ 'open',	"Exception from open"		        );
 ok($@ ~~ ':file',	"Exception from open / class :file"	);
 ok($@ ~~ ':io',		"Exception from open / class :io"	);
 ok($@ ~~ ':all',	"Exception from open / class :all"	);
-
-like($@, qr/Can't open '\w+' for reading: /, "Prety printed open msg");
-is($@->file, $0, "Correct file");
-is($@->function, 'CORE::open', "Correct dying sub");
-is($@->package, __PACKAGE__, "Correct package");
-is($@->caller,__PACKAGE__."::__ANON__", "Correct caller");
-is($@->args->[1], '<', 'Correct mode arg');
-is($@->args->[2], NO_SUCH_FILE, 'Correct filename arg');
 
 eval {
 	close(THIS_FILEHANDLE_AINT_OPEN);
